# saito

adk/: Google_ADKについて.md
adk/adk_project_01/: .gitignore  README.md  pyproject.toml
adk/adk_project_01/output/: result.txt
adk/adk_project_01/src/_01_first_agent/: agent.py
adk/adk_project_01/src/_02_built_in_tool_agent/: agent.py
adk/adk_project_01/src/_03_function_tool_agent/: agent.py
adk/adk_project_01/src/_04_sequential_agent/: agent.py  質問文
adk/adk_project_01/src/_05_sub_agent/: agent.py
adk/adk_project_01/src/_06_agent_as_tool/: agent.py
adk/adk_project_01/src/_07_parallel_tool_agent/: agent.py
adk/adk_project_01/src/_08_mcp_supabase_agent/: agent.py
adk/adk_project_01/src/_09_callback_agent/: agent.py
adk/adk_project_01/src/_10_a2a_minimal_agent/: README.md  agent.py  time_agent_server.py
adk/adk_project_01/src/_99_gpt_agent/: agent.py
docker/: README.md
docker/handson/: README.md  app.py  docker-compose.yml
fastapi/: .gitignore  README.md  database.py  index.html  main.py  main_simple.py  models.py  pyproject.toml  schemas.py
fastapi/decorator_sample/: README.md  basic_decorator.py
git_commands/: git_commands.md
sql_basic/: 01_ddl.sql  02_seed.sql  02_seed.tsv  ER図_矢印.drawio  ER図_鳥脚.drawio  SQL実装の言語化.md  sql-practice.md  window_function_basics.sql  データモデルを理解.md
